# server/api/controllers/products/controller.ts
@@ -8,6 +8,12 @@ export class Controller{
         console.log(products);
         res.json(products);
     }
+    public async saveProduct(req:Request,res:Response){
+        let product = req.body.product;
+        const result = await Products.insertMany(product);
+        //const products = await Products.find().exec();        
+        res.json(result);
+    }
 }
 
 export default new Controller();
