# server/api/models/products.model.ts
@@ -5,6 +5,12 @@ export interface IProduct extends Document {
     productName:string
     rate:Number
     cost:Number
+    mrp:Number
+    pack:String
+    vat:Number
+    mfgr:String
+    minStock:Number
+    hsnCode:String
 }
 
 export interface IProductModel extends Model<IProduct> {
@@ -14,7 +20,13 @@ export interface IProductModel extends Model<IProduct> {
 const schema = new Schema({
     productName:String,
     rate:Number,
-    cost:Number
+    cost:Number,
+    mrp:Number,
+    pack:String,
+    vat:Number,
+    mfgr:String,
+    minStock:Number,
+    hsnCode:String
 })
 
 export const Products = mongoose.model<IProduct>("Products",schema, "Products") as IProductModel;
